# legal-rag

./: .env.example  .gitignore  CHANGELOG.md  ENGINEERING_NOTES.md  README.md  app.py  pyproject.toml  requirements.txt
data/eval_sets/: answer_evaluation.csv  answer_relevancy.csv  golden_qa.json  golden_qa_with_answers.json  ragas_results.csv  ragas_scores.csv
data/raw/: bir_singh.txt  dashrath_rathod.txt  hiten_dalal.txt  ms_narayana_menon.txt  rangappa.txt
docs/: findings.md
frontend/: streamlit_app.py
notebooks/: findings.md
scripts/: check_index.py  check_last_chunk.py  evaluate_answers.py  evaluate_retrieval.py  ragas_eval.py  run_ragas_eval.py  run_ragas_eval_sequential.py  test_faithfulness_ascore.py  test_faithfulness_direct.py
src/legal_rag/: rag_pipeline.py
src/legal_rag/api/: main.py
src/legal_rag/configs/: settings.py
src/legal_rag/embeddings/: embedder.py
src/legal_rag/evaluation/: ragas_eval.py  ragas_patch.py
src/legal_rag/generation/: generator.py
src/legal_rag/ingestion/: loader.py
src/legal_rag/retrieval/: chroma_store.py  index_documents.py  retriever.py
tests/unit/: debug_chunks.py  inspect_chunks.py  test_chroma_store.py  test_citations.py  test_embedder.py  test_generator.py  test_loader.py  test_rag_pipeline.py  test_retriever.py  test_settings.py
