[project]
name = "legal-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.138.0",
    "google-api-core>=2.31.0",
    "langchain-core>=1.4.7",
    "langchain-google-genai>=4.2.5",
    "langchain-text-splitters>=1.1.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pytest>=9.1.0",
    "python-dotenv>=1.2.2",
    "tenacity>=9.1.4",
    "uvicorn>=0.49.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
